[package]
name = "sling"
version = "3.0.4"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["fs","sync","rt-multi-thread"] }
# tokio-stream = "0.1"
# futures = "0.3"

# env_logger = "0.10"

cln-rpc = "0.4"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.3" }
cln-plugin = "0.4"
# cln-plugin = { path="../lightning/plugins/", version = "^0.3" }

tabled = "0.18"
num-format = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"]}
rand = "0.9"
parking_lot = "0.12"
bitcoin = "0.31"

log-panics = "2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
# [dev-dependencies]
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# cln-grpc = "0.1"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
