[package]
name = "sling"
version = "4.1.1"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread"] }

# cln-rpc = "0.4"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.4" }
cln-rpc = { git = "https://github.com/ElementsProject/lightning.git", tag = "v25.05" }
# cln-plugin = "0.4"
# cln-plugin = { path="../lightning/plugins/", version = "^0.4" }
cln-plugin = { git = "https://github.com/ElementsProject/lightning.git", tag = "v25.05" }

tabled = "0.20"
num-format = "0.4"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
rand = "0.9"
parking_lot = "0.12"
bitcoin = "0.31"

log-panics = "2"

mimalloc = "0.1"

[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false
