[project]
name = "sling"
version = "0.1.0"
requires-python = ">=3.9"
description = "python dependencies for running tests"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.5",
]

[tool.uv]
override-dependencies = ["pytest>=8.4,<9"]
