[project]
name = "sling"
version = "0.1.0"
requires-python = ">=3.9.2"
description = "python dependencies for running tests"

[dependency-groups]
dev = [
    "pytest>=7.4,<9",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4,<3",
    "pyln-testing>=25.2",
    "pyln-client>=25.2",
    "pyln-proto>=25.2",
]
